--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -13,7 +13,7 @@ server {
     }
 
     location /admin/ {
-        proxy_pass http://foodgram:8000;
+        proxy_pass http://backend:8000;
     }
 
     location /api/docs/ {
@@ -25,7 +25,7 @@ server {
         proxy_set_header        Host $host;
         proxy_set_header        X-Forwarded-Host $host;
         proxy_set_header        X-Forwarded-Server $host;
-        proxy_pass http://foodgram:8000;
+        proxy_pass http://backend:8000;
     }
 
     location / {
