--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,7 +1,14 @@
 version: '3.9'
+
+volumes:
+  postgres_data:
+  static_value:
+  media_value:
+  result_build:
+
 services:
   db:
-    image: postgres:13.0-alpine
+    image: postgres:14.0-alpine
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
@@ -17,8 +24,8 @@ services:
     restart: always
     volumes:
       - ../data/:/app/data/
-      - ../static/:/app/static/
-      - ../media/:/app/media/
+      - ../static_value/:/app/static/
+      - ../media_value/:/app/media/
     depends_on:
       - db
     env_file:
@@ -33,13 +40,8 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
-      - ../static/:/var/html/static/
-      - ../media/:/var/html/media/
+      - static_value:/static/
+      - media_value:/media/
     depends_on:
       - backend
       - frontend
-
-volumes:
-  postgres_data:
-  static_value:
-  media_value:
