--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,14 +1,11 @@
 server {
-    server_tokens off;
     listen 80;
     server_name 178.154.200.109 komedianttosite.serveblog.net;
 
-    location /static/ {
-        autoindex on;
+    location /static_files/ {
         root /var/html/;
     }
     location /media/ {
-        autoindex on;
         root /var/html/;
     }
 
