--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -24,8 +24,8 @@ services:
     restart: always
     volumes:
       - ../data/:/app/data/
-      - ../static_value/:/app/static/
-      - ../media_value/:/app/media/
+      - static_value:/app/static_files/
+      - media_value:/app/media/
     depends_on:
       - db
     env_file:
@@ -40,7 +40,7 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
-      - static_value:/static/
+      - static_value:/static_files/
       - media_value:/media/
     depends_on:
       - backend
