--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -2,15 +2,14 @@ server {
     listen 80;
     server_name 178.154.200.109 komedianttosite.serveblog.net;
 
-    location /static_files/ {
-        root /var/html/;
+    location /static_files/admin/ {
+      root /var/html/;
     }
+    location /static_files/rest_framework/ {
+      root /var/html/;
+
     location /media/ {
         root /var/html/;
-    }
-
-    location /admin/ {
-        proxy_pass http://backend:8000;
     }
 
     location /api/docs/ {
@@ -18,11 +17,12 @@ server {
         try_files $uri $uri/redoc.html;
     }
 
-    location /api/ {
-        proxy_set_header        Host $host;
-        proxy_set_header        X-Forwarded-Host $host;
-        proxy_set_header        X-Forwarded-Server $host;
+    location ~ ^/(api|admin)/ {
         proxy_pass http://backend:8000;
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Real-IP $remote_addr;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header        X-Forwarded-Proto $scheme;
     }
 
     location / {
