--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -40,8 +40,8 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
-      - static_value:/static_files/
-      - media_value:/media/
+      - static_value:/var/html/static_files/
+      - media_value:/var/html/media/
     depends_on:
       - backend
       - frontend
